# back-end_vercel

./: .env.example  .gitignore  ASSINATURA_GOVBR.md  README.md  dashboard-estagios.html  mkdocs.yml  pyproject.toml  pyproject.toml.bak  requirements.txt
appdjango/: db.sqlite3  populate_db.py
appdjango/app/: admin.py  serializers.py  views.py
djangotutorial/: populate_db.py
djangotutorial/app/: api.py  api_urls.py  models.py  views.py
djangotutorial/app/migrations/: 0001_initial.py
djangotutorial/mysite/: urls.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/gerar-documento/: page.tsx
frontend/app/mural-de-status/: page.tsx
frontend/components/: LoginPage.tsx
frontend/components/dashboard/: AlunoSuccessView.tsx  ApplicationCard.tsx  ApplicationTimeline.tsx  BaixarModelosModal.tsx  Charts.tsx  CoordinatorAnalytics.tsx  CoordinatorDashboard.tsx  CoordinatorReviewView.tsx  CoordinatorSignView.tsx  Modal.tsx  NovaSolicitacaoModal.tsx  PdfDropzone.tsx  PdfViewer.tsx  RequirementsCard.tsx  SendDocumentsView.tsx  StudentDashboard.tsx  SubsequentUploads.tsx  TceFormTabs.tsx  gerardocumento.tsx
frontend/components/historico-de-validacoes/: page.tsx
frontend/components/ui/: select.tsx  tabs.tsx
frontend/lib/: api.ts  auth.ts  govbr_assinatura.ts
mkdocs/: index.md
mkdocs/Construcao/: git_issues.md
mkdocs/Elaboracao/: casos_de_uso.md  diagrama_de_classes.md  diagrama_de_sequencia.md  index.md  prototipo_alta_fidelidade.md  requisitos.md
mkdocs/Iniciacao/: 5w2h.md  brainstorm.md  design_thinking.md  doc_template.md  documento_de_visao.md  index.md  mapa_mental.md  pesquisa.md  prototipo_baixa_fidelidade.md
mkdocs/Transicao/: index.md
mkdocs/_____Iteração/: interacao1.md  interacao2.md  interacao3.md  interacao4.md  interacao5.md  interacao6.md  interacao7.md
mkdocs/assets/Mapas_Mentais/: mm.wsd
mkdocs/assets/Modelos_Estagio/: ACOMPANHAMENTOESTAGIO.doc  Acordo de Cooperaá∆o.docx  AvaliacaodeDesempenho.doc  RelatorioFinalCLTSOCIO.doc  TCETERMOCOMPROMISSODEESTAGIO.docx  TermoAditivoEstagio.docx  TermoAditivodeEstagio.docx  (+2 more)
mkdocs/css/: extra.css
mkdocs/diagramas/: teste.puml
src/Estagio/: db.sqlite3  fix_docx_tags.py  make_apolice_template.py  manage.py  populate_db.py  requirements.txt
src/EstagioProject/: populate_db.py
src/Streaming/: db.sqlite3
(+46 files in other folders)
