[project]
name = "pbe-backend"
version = "0.1.0"
description = "Backend do projeto de extensão"
requires-python = ">=3.10"
dependencies = [
    "Django>=5.2,<6.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "docxtpl>=0.20.2",
    "docx2pdf>=0.1.8",
    "whitenoise>=6.9.0",
    "gunicorn>=23.0.0",
]

# Daqui para baixo você mantém o que já existia no seu arquivo, como:
[tool.poetry]
# ... suas configs antigas do poetry (se houver)
[tool.vercel]
entrypoint = "src.Estagio.mysite.asgi:application"

[tool.vercel.scripts]
build = "python src/Estagio/manage.py collectstatic --noinput"